// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`five 1`] = `
[
  ContentBlock {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 72.4,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:26.05:72.4:0",
    "offsetPx": 521,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": false,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": false,
    "start": 26.05,
    "type": "ContentBlock",
    "variant": undefined,
    "widthPx": 927.0000000000002,
  },
]
`;

exports[`four 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "displayedRegionIndex": undefined,
    "end": undefined,
    "isLeftEndOfDisplayedRegion": undefined,
    "isRightEndOfDisplayedRegion": undefined,
    "key": "test:ctgA:0:250:0-beforeFirstRegion",
    "offsetPx": -100,
    "parentRegion": undefined,
    "refName": undefined,
    "reversed": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 250,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:0:250:0",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 0,
    "type": "ContentBlock",
    "variant": undefined,
    "widthPx": 250,
  },
]
`;

exports[`one 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "displayedRegionIndex": undefined,
    "end": undefined,
    "isLeftEndOfDisplayedRegion": undefined,
    "isRightEndOfDisplayedRegion": undefined,
    "key": "test:ctgA:0:200:0-beforeFirstRegion",
    "offsetPx": 0,
    "parentRegion": undefined,
    "refName": undefined,
    "reversed": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 200,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:0:200:0",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 0,
    "type": "ContentBlock",
    "variant": undefined,
    "widthPx": 200,
  },
]
`;

exports[`three 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "displayedRegionIndex": undefined,
    "end": undefined,
    "isLeftEndOfDisplayedRegion": undefined,
    "isRightEndOfDisplayedRegion": undefined,
    "key": "test:ctgA:49900:50000:0:rev-beforeFirstRegion",
    "offsetPx": -100,
    "parentRegion": undefined,
    "refName": undefined,
    "reversed": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:49900:50000:0:rev",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": true,
    "start": 49900,
    "type": "ContentBlock",
    "variant": undefined,
    "widthPx": 100,
  },
]
`;

exports[`two 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "displayedRegionIndex": undefined,
    "end": undefined,
    "isLeftEndOfDisplayedRegion": undefined,
    "isRightEndOfDisplayedRegion": undefined,
    "key": "test:ctgA:49800:50000:0:rev-beforeFirstRegion",
    "offsetPx": 0,
    "parentRegion": undefined,
    "refName": undefined,
    "reversed": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:49800:50000:0:rev",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": true,
    "start": 49800,
    "type": "ContentBlock",
    "variant": undefined,
    "widthPx": 200,
  },
]
`;
